--- a/src/core/filters/deskew/ui/DeskewOptionsWidget.ui
+++ b/src/core/filters/deskew/ui/DeskewOptionsWidget.ui
@@ -6,20 +6,50 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>268</width>
-    <height>942</height>
+    <width>248</width>
+    <height>843</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
+   <property name="spacing">
+    <number>4</number>
+   </property>
+   <property name="leftMargin">
+    <number>4</number>
+   </property>
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="rightMargin">
+    <number>4</number>
+   </property>
+   <property name="bottomMargin">
+    <number>4</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="distortionTypePanel">
      <property name="title">
       <string>Distortion type</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="distortionTypeHorizontalLayout">
         <property name="spacing">
@@ -32,7 +62,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -157,7 +187,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -174,7 +204,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>17</height>
            </size>
           </property>
@@ -194,7 +224,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>17</height>
            </size>
           </property>
@@ -211,6 +241,21 @@ Perspective correction.</string>
       <string>Mode</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="modeHorizontalLayout">
         <item>
@@ -220,7 +265,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -228,6 +273,12 @@ Perspective correction.</string>
         </item>
         <item>
          <widget class="QPushButton" name="modeAutoBtn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Auto</string>
           </property>
@@ -244,6 +295,12 @@ Perspective correction.</string>
         </item>
         <item>
          <widget class="QPushButton" name="modeManualBtn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Manual</string>
           </property>
@@ -265,7 +322,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -282,7 +339,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -302,7 +359,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -319,6 +376,21 @@ Perspective correction.</string>
       <string>Rotation angle</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <spacer name="horizontalSpacerRotationLeft">
         <property name="orientation">
@@ -326,7 +398,7 @@ Perspective correction.</string>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>1</width>
+          <width>4</width>
           <height>20</height>
          </size>
         </property>
@@ -349,7 +421,7 @@ Perspective correction.</string>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>1</width>
+          <width>4</width>
           <height>20</height>
          </size>
         </property>
@@ -364,6 +436,21 @@ Perspective correction.</string>
       <string>FOV</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="fovAutoManualHorizontalLayout">
         <item>
@@ -373,7 +460,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -415,7 +502,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -526,7 +613,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -546,7 +633,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -563,6 +650,21 @@ Perspective correction.</string>
       <string>Frame</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_9">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="frameAutoManualHorizontalLayout">
         <item>
@@ -572,7 +674,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -614,7 +716,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -739,7 +841,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -759,7 +861,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -776,6 +878,21 @@ Perspective correction.</string>
       <string>Bend</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_5">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="bendAutoManualHorizontalLayout">
         <item>
@@ -785,7 +902,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -827,7 +944,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -941,7 +1058,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -961,7 +1078,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -978,6 +1095,21 @@ Perspective correction.</string>
       <string>Size</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_7">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <widget class="QComboBox" name="sizeModeComboBox">
         <item>
@@ -1105,7 +1237,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -1125,7 +1257,7 @@ Perspective correction.</string>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>10</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -1144,13 +1276,50 @@ Perspective correction.</string>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>1</height>
+       <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>noDistortionButton</tabstop>
+  <tabstop>rotationDistortionButton</tabstop>
+  <tabstop>perspectiveDistortionButton</tabstop>
+  <tabstop>warpDistortionButton</tabstop>
+  <tabstop>applyDistortionTypeBtn</tabstop>
+  <tabstop>modeAutoBtn</tabstop>
+  <tabstop>modeManualBtn</tabstop>
+  <tabstop>modeApplyBtn</tabstop>
+  <tabstop>angleSpinBox</tabstop>
+  <tabstop>fovAutoBtn</tabstop>
+  <tabstop>fovManualBtn</tabstop>
+  <tabstop>fovSlider</tabstop>
+  <tabstop>fovMinSpinBox</tabstop>
+  <tabstop>fovSpinBox</tabstop>
+  <tabstop>fovMaxSpinBox</tabstop>
+  <tabstop>fovApplyBtn</tabstop>
+  <tabstop>frameAutoBtn</tabstop>
+  <tabstop>frameManualBtn</tabstop>
+  <tabstop>frameWidthSpinBox</tabstop>
+  <tabstop>frameHeightSpinBox</tabstop>
+  <tabstop>frameCenterXSpinBox</tabstop>
+  <tabstop>frameCenterYSpinBox</tabstop>
+  <tabstop>frameApplyBtn</tabstop>
+  <tabstop>bendAutoBtn</tabstop>
+  <tabstop>bendManualBtn</tabstop>
+  <tabstop>bendSlider</tabstop>
+  <tabstop>bendMinSpinBox</tabstop>
+  <tabstop>bendSpinBox</tabstop>
+  <tabstop>bendMaxSpinBox</tabstop>
+  <tabstop>bendApplyBtn</tabstop>
+  <tabstop>sizeModeComboBox</tabstop>
+  <tabstop>sizeWidthSpinBox</tabstop>
+  <tabstop>sizeHeightSpinBox</tabstop>
+  <tabstop>sizeDistanceSpinBox</tabstop>
+  <tabstop>sizeApplyBtn</tabstop>
+ </tabstops>
  <resources>
   <include location="../../../../app/resources/resources.qrc"/>
  </resources>
