--- a/src/core/filters/page_layout/ui/PageLayoutOptionsWidget.ui
+++ b/src/core/filters/page_layout/ui/PageLayoutOptionsWidget.ui
@@ -6,20 +6,50 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>254</width>
-    <height>775</height>
+    <width>181</width>
+    <height>388</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string notr="true">Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="spacing">
+    <number>4</number>
+   </property>
+   <property name="leftMargin">
+    <number>4</number>
+   </property>
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="rightMargin">
+    <number>4</number>
+   </property>
+   <property name="bottomMargin">
+    <number>4</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="marginsGroup">
      <property name="title">
       <string>Margins</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
@@ -29,8 +59,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
-            <height>1</height>
+            <width>4</width>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -60,8 +90,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
-            <height>1</height>
+            <width>4</width>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -78,8 +108,8 @@
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>1</width>
-             <height>1</height>
+             <width>4</width>
+             <height>20</height>
             </size>
            </property>
           </spacer>
@@ -220,8 +250,8 @@
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>1</width>
-             <height>1</height>
+             <width>4</width>
+             <height>20</height>
             </size>
            </property>
           </spacer>
@@ -254,7 +284,7 @@
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>40</width>
+             <width>4</width>
              <height>20</height>
             </size>
            </property>
@@ -277,7 +307,7 @@
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>40</width>
+             <width>4</width>
              <height>20</height>
             </size>
            </property>
@@ -295,8 +325,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>13</width>
-            <height>13</height>
+            <width>4</width>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -315,8 +345,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>13</width>
-            <height>13</height>
+            <width>4</width>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -332,6 +362,21 @@
       <string>Alignment</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
+      <property name="spacing">
+       <number>4</number>
+      </property>
       <item row="0" column="0">
        <widget class="AlignmentWidget" name="widgetAlignment" native="true"/>
       </item>
@@ -344,8 +389,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
-            <height>1</height>
+            <width>4</width>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -364,8 +409,8 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
-            <height>1</height>
+            <width>4</width>
+            <height>20</height>
            </size>
           </property>
          </spacer>
@@ -412,21 +457,21 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
      </layout>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
@@ -441,11 +486,11 @@
  <tabstops>
   <tabstop>unitsComboBox</tabstop>
   <tabstop>topMarginSpinBox</tabstop>
-  <tabstop>topBottomLink</tabstop>
   <tabstop>bottomMarginSpinBox</tabstop>
   <tabstop>leftMarginSpinBox</tabstop>
-  <tabstop>leftRightLink</tabstop>
   <tabstop>rightMarginSpinBox</tabstop>
+  <tabstop>topBottomLink</tabstop>
+  <tabstop>leftRightLink</tabstop>
   <tabstop>autoMargins</tabstop>
   <tabstop>applyMarginsBtn</tabstop>
   <tabstop>applyAlignmentBtn</tabstop>
