--- a/src/core/filters/page_split/ui/PageSplitOptionsWidget.ui
+++ b/src/core/filters/page_split/ui/PageSplitOptionsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>238</width>
-    <height>270</height>
+    <width>196</width>
+    <height>193</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,12 +20,42 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <property name="spacing">
+    <number>4</number>
+   </property>
+   <property name="leftMargin">
+    <number>4</number>
+   </property>
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="rightMargin">
+    <number>4</number>
+   </property>
+   <property name="bottomMargin">
+    <number>4</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Page Layout on image</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="spacing">
+       <number>4</number>
+      </property>
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <property name="sizeConstraint">
@@ -38,7 +68,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>13</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -120,7 +150,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>13</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -147,7 +177,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -167,7 +197,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -185,13 +215,19 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
-       <number>9</number>
+       <number>4</number>
       </property>
       <property name="leftMargin">
-       <number>9</number>
+       <number>4</number>
       </property>
       <property name="topMargin">
-       <number>9</number>
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
       </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -202,7 +238,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -244,7 +280,7 @@
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>1</width>
+            <width>4</width>
             <height>20</height>
            </size>
           </property>
@@ -263,7 +299,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>52</height>
+       <height>20</height>
       </size>
      </property>
     </spacer>
