--- a/src/stylesheets/Breeze.qss
+++ b/src/stylesheets/Breeze.qss
@@ -373,8 +373,9 @@ QGroupBox
 {
     border: 1px solid #BAB9B8;
     border-radius: 0.2ex;
-    padding-top: 1ex;
-    margin-top: 1ex;
+    padding-top: 2.25ex;
+    padding-bottom: 1.25ex;
+    margin-top: 2.25ex;
 }
 
 QGroupBox::title
