--- a/src/stylesheets/dark_blue.qss
+++ b/src/stylesheets/dark_blue.qss
@@ -257,6 +257,59 @@ QTreeView
     alternate-background-color: #242424;
 }
 
+QGroupBox#pageRotateGroupBox,
+QGroupBox#pageRotateGroupBox > QLabel,
+QGroupBox#pageLayoutGroupBox,
+QGroupBox#pageLayoutGroupBox > QLabel,
+QGroupBox#pageSplitLineGroup,
+QGroupBox#distortionTypePanel,
+QGroupBox#distortionModeGroupGox,
+QGroupBox#rotationPanel,
+QGroupBox#fovGroupBox,
+QGroupBox#fovGroupBox > QLabel,
+QGroupBox#fovGroupBox > QSlider,
+QGroupBox#frameGroupBox,
+QGroupBox#frameGroupBox > QLabel,
+QGroupBox#bendGroupBox,
+QGroupBox#bendGroupBox > QLabel,
+QGroupBox#bendGroupBox > QSlider,
+QGroupBox#sizeGroupBox,
+QGroupBox#sizeGroupBox > QLabel,
+QGroupBox#gbPageBox,
+QGroupBox#contentGroupBox,
+QGroupBox#marginsGroup,
+QGroupBox#alignmentGroup,
+QCheckBox#alignWithOthersCB,
+QCheckBox#fineTuneBtn,
+QGroupBox#gbBordersPanel,
+QGroupBox#gbBordersPanel > QLabel,
+QWidget#panelFineTuneCorners,
+QCheckBox#autoMargins,
+QWidget#panelAlignment,
+QWidget#panelMarginsControls,
+QWidget#panelMarginsControls > QLabel,
+QLabel#lblCurrentAlignment,
+QWidget#panelAdvancedAlignment,
+QGroupBox#outputModeGroupBox,
+QWidget#illuminationPanel,
+QWidget#illuminationPanel > QCheckBox,
+QWidget#layersPanel,
+QWidget#layersPanel > QCheckBox,
+QWidget#autoMarginsLayout_2,
+QGroupBox#bwOptionsGroupBox,
+QGroupBox#bwOptionsGroupBox > QLabel,
+QGroupBox#bwOptionsGroupBox > QSlider,
+QGroupBox#foregroundOptionsGroupBox,
+QGroupBox#foregroundOptionsGroupBox > QLabel,
+QGroupBox#foregroundOptionsGroupBox > QSlider,
+QGroupBox#despecklingGroupBox,
+QGroupBox#despecklingGroupBox > QLabel,
+QGroupBox#outputResolutionGroupBox > QLabel,
+QGroupBox#outputResolutionGroupBox
+{
+    background-color: #3D3D3F;
+}
+
 /* Colors - Widgets - Disabled */
 
 QCheckBox:disabled,
